--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,77 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CustomTheme" parent="FirebaseUI">
+
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:orientation">vertical</item>
+        <item name="colorAccent">@color/material_purple_a700</item>
+        <item name="colorControlNormal">@color/material_green_500</item>
+        <item name="colorControlActivated">@color/material_lime_a800</item>
+        <item name="colorControlHighlight">@color/material_green_a200</item>
+        <item name="android:windowBackground">@drawable/benderbcg</item>
+        <item name="colorButtonNormal">@color/material_purple_500</item>
+        <item name="android:windowActionBarOverlay">true</item>
+
+    </style>
+    <style name="FirebaseUI.Text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textSize">20sp</item>
+
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+    <style name="FirebaseUI.Button.AccountChooser.GoogleButton">
+        <item name="drawableStartCompat">@drawable/fui_ic_googleg_color_24dp</item>
+        <item name="android:background">@drawable/fui_idp_button_background_google</item>
+        <item name="android:textColor">#757575</item>
+        <item name="android:bottomRightRadius">20dp</item>
+        <item name="android:bottomLeftRadius">20dp</item>
+        <item name="android:topRightRadius">20dp</item>
+        <item name="android:topLeftRadius">20dp</item>
+        <item name="android:layout_height">60dp</item>
+
+        <item name="android:layout_width">220dp</item>
+
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginEnd">100dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+    <style name="FirebaseUI.Button.AccountChooser.FacebookButton">
+        <item name="drawableStartCompat">@drawable/fui_ic_facebook_white_22dp</item>
+        <item name="android:background">@drawable/fui_idp_button_background_facebook</item>
+        <item name="android:textColor">#FFFFFFFF</item>
+        <item name= "android:bottomRightRadius">12dp</item>
+        <item name= "android:bottomLeftRadius">12dp</item>
+        <item name= "android:topRightRadius">12dp</item>
+        <item name= "android:topLeftRadius">12dp</item>
+        <item name="android:layout_height">60dp</item>
+
+        <item name="android:layout_width">220dp</item>
+
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginEnd">100dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+    <style name="FirebaseUI.Button.AccountChooser.EmailButton">
+        <item name="drawableStartCompat">@drawable/fui_ic_mail_white_24dp</item>
+        <item name="android:background">@drawable/fui_idp_button_background_email</item>
+        <item name="android:textColor">#ffffff</item>
+
+        <item name= "android:bottomRightRadius">12dp</item>
+        <item name= "android:bottomLeftRadius">12dp</item>
+        <item name= "android:topRightRadius">12dp</item>
+        <item name= "android:topLeftRadius">12dp</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_width">220dp</item>
+
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginEnd">100dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
+
 </resources>
