--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -103,28 +103,28 @@
         android:id="@+id/menu"
         android:layout_width="50dp"
         android:layout_height="53dp"
+        android:layout_alignEnd="@+id/Qtimer"
+        android:layout_alignTop="@+id/profileText"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/menu2"
         android:onClick="toggleMenu"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
-        map:layout_constraintHorizontal_bias="0.939"
-        map:layout_constraintRight_toRightOf="parent"
+        map:layout_constraintHorizontal_bias="0.905"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toTopOf="parent"
-        map:layout_constraintVertical_bias="0.957" />
+        map:layout_constraintVertical_bias="0.939" />
 
     <RelativeLayout
         android:id="@+id/menuOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#77000000"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="33dp">
 
         <ProgressBar
             android:id="@+id/healthbar"
