--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#84b53f</color>
+    <color name="colorPrimaryDark">#6d094d</color>
+    <color name="colorAccent">#ffef40</color>
     <color name="gridcolor">#151515</color>
     <color name="material_green_600">#43A047</color>
     <color name="material_green_500">#4CAF50</color>
-    <color name="material_green_700">#388E3C</color>
+    <color name="material_green_700">#388e3c</color>
     <color name="material_green_a200">#69F0AE</color>
     <color name="material_lime_a800">#AFB42B</color>
     <color name="material_lime_50">#F9FBE7</color>
