--- a/app/src/main/res/layout/activity_log_out.xml
+++ b/app/src/main/res/layout/activity_log_out.xml
@@ -7,6 +7,17 @@
     android:background="@drawable/homebase"
     tools:context="com.example.kona.myapplication.ProfileActivity">
 
+    <ImageButton
+        android:id="@+id/avatar"
+        android:layout_width="136dp"
+        android:layout_height="131dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="37dp"
+        android:onClick="showAvatars"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/changeName"
@@ -157,4 +168,58 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.394" />
+
+    <RelativeLayout
+        android:layout_width="368dp"
+        android:layout_height="353dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="#77000000"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.855">
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="74dp"
+            android:layout_height="70dp"
+            android:layout_alignTop="@+id/imageButton4"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/animepic1"
+            android:onClick="changeAvatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/avatar" />
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_width="74dp"
+            android:layout_height="70dp"
+            android:layout_alignTop="@+id/imageButton2"
+            android:layout_marginStart="37dp"
+            android:layout_toEndOf="@+id/imageButton2"
+            android:background="@drawable/animepic2"
+            android:onClick="changeAvatar"
+            app:layout_constraintStart_toEndOf="@+id/imageButton2"
+            app:layout_constraintTop_toBottomOf="@+id/avatar" />
+
+        <ImageButton
+            android:id="@+id/imageButton4"
+            android:layout_width="74dp"
+            android:layout_height="70dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="26dp"
+            android:background="@drawable/animepic3"
+            android:onClick="changeAvatar"
+            app:layout_constraintStart_toEndOf="@+id/imageButton3"
+            app:layout_constraintTop_toBottomOf="@+id/avatar" />
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
