--- a/app/src/main/res/layout/activity_log_out.xml
+++ b/app/src/main/res/layout/activity_log_out.xml
@@ -170,8 +170,9 @@
         app:layout_constraintVertical_bias="0.394" />
 
     <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="353dp"
+        android:id="@+id/relativeavatar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -180,10 +181,10 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.234"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.855">
+        app:layout_constraintVertical_bias="0.425">
 
         <ImageButton
             android:id="@+id/imageButton2"
