--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -132,7 +132,7 @@
             android:layout_width="200dp"
             android:layout_height="43dp"
             android:layout_alignBottom="@+id/avatar"
-            android:layout_toEndOf="@+id/avatar"
+            android:layout_alignParentEnd="true"
             android:max="100"
             android:progress="50"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -149,7 +149,7 @@
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_above="@+id/healthbar"
-            android:layout_toEndOf="@+id/avatar"
+            android:layout_alignParentEnd="true"
             android:text="SWAGKILLA"
             android:textColor="#0ddfd8"
             android:textSize="30sp"
@@ -263,7 +263,7 @@
         <TextView
             android:id="@+id/Qtimer"
             android:layout_width="120dp"
-            android:layout_height="90dp"
+            android:layout_height="80dp"
             android:layout_alignTop="@+id/questText"
             android:layout_toStartOf="@+id/healthbar"
             android:background="#40efe9e9"
@@ -271,6 +271,15 @@
             android:textSize="40dp"
             tools:layout_editor_absoluteX="125dp"
             tools:layout_editor_absoluteY="351dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_alignStart="@+id/Qtimer"
+            android:layout_below="@+id/profileText"
+            android:layout_marginStart="11dp"
+            android:text="@string/qtimertext" />
 
     </RelativeLayout>
 
